# raytracer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
app/: CMakeLists.txt  CreateWorld.hpp  main.cpp
images/: 10_patterns.ppm  11_reflection_and_refraction.ppm  2_drawing_on_a_canvas.ppm  4_matrix_transformations.ppm  5_ray_sphere_intersections.ppm  6_light_and_shading.ppm  8_shadows.ppm  9_planes.ppm
libraries/: CMakeLists.txt
libraries/Canvas/: CMakeLists.txt
libraries/Canvas/include/: Canvas.h  Canvas.hpp
libraries/Canvas/src/: Canvas.cpp
libraries/Geometry/: CMakeLists.txt
libraries/Geometry/include/: Bounds.hpp  Cone.h  Cone.hpp  Cube.h  Cube.hpp  Cylinder.h  Cylinder.hpp  Group.hpp  Intersection.h  Intersection.hpp  Plane.h  Plane.hpp  Shape.h  Shape.hpp  Sphere.h  Sphere.hpp  Triangle.hpp
libraries/Geometry/src/: Bounds.cpp  Cone.cpp  Cube.cpp  Cylinder.cpp  Group.cpp  Intersection.cpp  Plane.cpp  Shape.cpp  Sphere.cpp  Triangle.cpp
libraries/IO/: CMakeLists.txt
libraries/IO/include/: FileOBJParser.hpp
libraries/IO/src/: FileOBJParser.cpp
libraries/Material/: CMakeLists.txt
libraries/Material/include/: Material.h  Material.hpp
libraries/Material/src/: Material.cpp
libraries/Pattern/: CMakeLists.txt
libraries/Pattern/include/: CheckersPattern.h  CheckersPattern.hpp  GradientPattern.h  GradientPattern.hpp  Pattern.h  Pattern.hpp  RingPattern.h  RingPattern.hpp  StripePattern.h  StripePattern.hpp
libraries/Pattern/src/: CheckersPattern.cpp  GradientPattern.cpp  RingPattern.cpp  StripePattern.cpp
libraries/Scene/: CMakeLists.txt
libraries/Scene/include/: Camera.h  Camera.hpp  Light.h  Light.hpp  World.h  World.hpp
libraries/Scene/src/: Camera.cpp  Light.cpp  World.cpp
libraries/Utility/: CMakeLists.txt
libraries/Utility/include/: AlmostEquals.h  AlmostEquals.hpp  Color.h  Color.hpp  Matrix.h  Matrix.hpp  Point.h  Point.hpp  ProgressBar.hpp  Ray.h  Ray.hpp  Tuple.h  Tuple.hpp  Vector.h  Vector.hpp
libraries/Utility/src/: Matrix.cpp  Ray.cpp  Tuple.cpp
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  main.cpp
test/Canvas/: CMakeLists.txt  CanvasTests.cpp
test/Geometry/: BoundsTests.cpp  CMakeLists.txt  ConeTests.cpp  CubeTests.cpp  CylinderTests.cpp  GroupTests.cpp  IntersectionTests.cpp  PlaneTests.cpp  ShapeTests.cpp  SphereTests.cpp  TriangleTests.cpp
test/IO/: CMakeLists.txt  FileOBJParserTests.cpp
test/Material/: CMakeLists.txt  MaterialTests.cpp
test/Pattern/: CMakeLists.txt  CheckersPatternTests.cpp  GradientPatternTests.cpp  PatternTests.cpp  RingPatternTests.cpp  StripePatternTests.cpp
test/Scene/: CMakeLists.txt  CameraTests.cpp  LightTests.cpp  WorldTests.cpp
test/Utility/: CMakeLists.txt  ColorTests.cpp  MatrixTests.cpp  PointTests.cpp  RayTests.cpp  TupleTests.cpp  VectorTests.cpp
